--- a/Analise_de_dados_EBAC_SQL.ipynb
+++ b/Analise_de_dados_EBAC_SQL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNb9N+S5J7MXm7TSTieMpj8",
+      "authorship_tag": "ABX9TyPaOPmVpL3/P56jZnDE3pjE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,10 @@
         "*   Exploração e análise de dados de crédito com SQL\n",
         "*   As aulas são feitas pela plataforma AWS, mas optei por utilizar o MYSQL Workbench.\n",
         "*   Fiz o download do arquivo completo.\n",
+        "*   Arquivos: credito.csv / cred_escolaridade.xlsx\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
