--- a/Profissao_Analista_de_dados_M28_Exercicio.ipynb
+++ b/Profissao_Analista_de_dados_M28_Exercicio.ipynb
@@ -115,7 +115,7 @@
         "id": "XRURE1uUFXGw"
       },
       "source": [
-        "A análise de dados para um arquivo sobre a COVID-19 envolve várias etapas importantes. Primeiro, é necessário coletar e organizar os dados em um formato adequado para análise. Esse trabalho tem por objetivo analisar dados em um periodo especifico (2020-2021).Os dados sobre vacinação da COVID-19 serão obtidos da Universidade John Hopkins."
+        "A análise de dados para um arquivo sobre a COVID-19 envolve várias etapas importantes. Primeiro, é necessário coletar e organizar os dados em um formato adequado para análise. Esse trabalho tem por objetivo analisar dados em um periodo especifico (2020-2021).Os dados sobre vacinação da COVID-19 serão obtidos da Universidade John Hopkins. O objetivo é realizar um comparativo entre Brasil e Austrália no mesmo período (Janeiro/2021)"
       ]
     },
     {
