--- a/Pipeline_dados_ebac_.ipynb
+++ b/Pipeline_dados_ebac_.ipynb
@@ -152,7 +152,7 @@
         "    try:\n",
         "        message = client.messages.create(\n",
         "            body=mensagem,\n",
-        "            from_='whatsapp:+14155238886',\n",
+        "            from_='whatsapp:+1xxxxxxxxxxxx',\n",
         "            to=f'whatsapp:{numero_whatsapp}'\n",
         "        )\n",
         "        print(f'Mensagem enviada com sucesso!. SID da mensagem: {message.sid}')\n",
@@ -161,7 +161,7 @@
         "\n",
         "# Exemplo de uso\n",
         "mensagem_para_enviar = \"Olá! Essa é mais uma mensagem enviada pelo Google Colab via WhatsApp.Pipeline Ebac.\"\n",
-        "numero_destinatario = \"5511976489633\"  # O número precisa estar com o código do país, ex: +55 para o Brasil\n",
+        "numero_destinatario = \"5511xxxxxxxxxxxx\"  # O número precisa estar com o código do país, ex: +55 para o Brasil\n",
         "\n",
         "enviar_mensagem_whatsapp(mensagem_para_enviar, numero_destinatario)\n"
       ],
@@ -208,7 +208,7 @@
         "    try:\n",
         "        message = client.messages.create(\n",
         "            body=mensagem,\n",
-        "            from_='whatsapp:+14155238886',\n",
+        "            from_='whatsapp:+14xxxxxxxx',\n",
         "            to=f'whatsapp:{numero_whatsapp}'\n",
         "        )\n",
         "        print(f'Segunda mensagem enviada com sucesso! SID da mensagem: {message.sid}')\n",
@@ -264,7 +264,7 @@
       "cell_type": "code",
       "source": [
         "mensagem_para_enviar = \"Olá! Essa é a segunda mensagem enviada pelo Google Colab via WhatsApp.\"\n",
-        "numero_destinatario = \"5511976479633\"  # O número precisa estar com o código do país, ex: +55 para o Brasil\n",
+        "numero_destinatario = \"55xxxxxxxxxxxxx\"  # O número precisa estar com o código do país, ex: +55 para o Brasil\n",
         "\n",
         "enviar_mensagem_whatsapp(mensagem_para_enviar, numero_destinatario, nome_arquivo_json)\n"
       ],
